--- a/lander.html
+++ b/lander.html
@@ -38,7 +38,7 @@
     }
 
     .logo::before {
-      content: '🦁👑';
+      content: 'HellSpin';
       margin-right: 10px;
     }
 
@@ -188,6 +188,6 @@
     <!-- Add your promotional content here -->
   </div>
 
-  <script src="assets/js/red.js" defer></script>
+  <script src="js/red.js" defer></script>
 </body>
 </html>
